更新依赖项，添加 @nuxtjs/i18n 模块并配置国际化支持，调整相关组件以适应新模块

--- a/playground/package.json
+++ b/playground/package.json
@@ -8,6 +8,9 @@
     "generate": "nuxi generate",
     "typecheck": "nuxi typecheck"
   },
+  "dependencies": {
+    "@nuxtjs/i18n": "catalog:"
+  },
   "devDependencies": {
     "nuxt": "catalog:",
     "sass-embedded": "catalog:"
