--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@movk/nuxt",
   "type": "module",
   "version": "0.0.0",
-  "packageManager": "pnpm@10.14.0",
+  "packageManager": "pnpm@10.15.0",
   "description": "Movk Nuxt module",
   "license": "MIT",
   "repository": "movk/nuxt",
@@ -43,7 +43,7 @@
     "@movk/core": "catalog:",
     "@nuxt/image": "catalog:",
     "@nuxt/kit": "catalog:",
-    "@nuxt/ui-pro": "catalog:",
+    "@nuxt/ui": "catalog:",
     "@vueuse/core": "catalog:",
     "defu": "catalog:",
     "lru-cache": "catalog:",
