chore: 更新 ESLint 配置，调整 pnpm 工作区和 VSCode 设置，添加新的样式文件和组件
- 移除 ESLint 配置中的多行规则。
- 修改 pnpm 工作区文件，更新 @nuxt/ui 和添加 @vueuse/motion 依赖。
- 更新 VSCode 设置，调整 i18n-ally.enabledFrameworks 的格式。
- 新增 main.css 样式文件，导入 Tailwind CSS 和 @nuxt/ui。
- 新增 GradientBackground 组件，优化布局和样式。
- 删除不再使用的 LogoApplication 组件和 useFaviconFromTheme 组合函数。
- 更新 auth.vue 和其他页面，重构组件结构以提升可读性和维护性。

--- a/playground/package.json
+++ b/playground/package.json
@@ -9,7 +9,8 @@
     "typecheck": "nuxi typecheck"
   },
   "dependencies": {
-    "@nuxtjs/i18n": "catalog:"
+    "@nuxtjs/i18n": "catalog:",
+    "@vueuse/motion": "catalog:"
   },
   "devDependencies": {
     "nuxt": "catalog:",
