--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
   "i18n-ally.localesPaths": [
     "**/i18n/locales"
   ],
-  "i18n-ally.enabledFrameworks": ["vue"],
+  "i18n-ally.enabledFrameworks": [
+    "vue"
+  ],
   "i18n-ally.displayLanguage": "zh_cn",
   "i18n-ally.sortKeys": true,
   "i18n-ally.keepFulfilled": true,
@@ -89,7 +91,13 @@
     "inactive-class"
   ],
   "tailwindCSS.experimental.classRegex": [
-    ["ui:\\s*{([^)]*)\\s*}", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
+    [
+      "ui:\\s*{([^)]*)\\s*}",
+      "(?:'|\"|`)([^']*)(?:'|\"|`)"
+    ]
   ],
-  "tailwindCSS.experimental.configFile": "src/runtime/assets/main.css"
+  "tailwindCSS.experimental.configFile": {
+    "playground/app/assets/css/main.css": "playground/app/**",
+    "src/runtime/assets/css/main.css": "src/runtime/**"
+  }
 }
