--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -13,10 +13,11 @@ catalog:
   '@nuxt/kit': ^4.0.3
   '@nuxt/module-builder': ^1.0.2
   '@nuxt/schema': ^4.0.3
-  '@nuxt/ui': ^4.0.0-alpha.0
+  '@nuxt/ui': 4.0.0-alpha.0
   '@nuxtjs/i18n': ^10.0.6
   '@types/node': ^24.3.0
   '@vueuse/core': ^13.8.0
+  '@vueuse/motion': ^3.0.3
   '@vueuse/nuxt': ^13.8.0
   defu: ^6.1.4
   eslint: ^9.34.0
