--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@movk/core": "catalog:",
     "@nuxt/image": "catalog:",
     "@nuxt/kit": "catalog:",
+    "@nuxt/ui": "catalog:",
     "@nuxtjs/i18n": "catalog:",
     "@vueuse/core": "catalog:",
     "defu": "catalog:",
