--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,7 +2,7 @@ packages:
   - playground
 
 catalog:
-  '@antfu/eslint-config': ^5.2.1
+  '@antfu/eslint-config': ^5.2.2
   '@antfu/ni': ^25.0.0
   '@iconify-json/lucide': ^1.2.66
   '@iconify-json/simple-icons': ^1.2.50
@@ -15,7 +15,7 @@ catalog:
   '@nuxt/schema': ^4.1.0
   '@nuxt/ui': ^4.0.0-alpha.1
   '@nuxtjs/i18n': ^10.0.6
-  '@types/node': ^24.3.0
+  '@types/node': ^24.3.1
   '@vueuse/core': ^13.9.0
   '@vueuse/motion': ^3.0.3
   '@vueuse/nuxt': ^13.9.0
@@ -24,10 +24,10 @@ catalog:
   eslint-plugin-format: ^1.0.1
   fast-glob: ^3.3.3
   lru-cache: ^11.2.1
-  nuxt: ^4.1.0
-  nuxt-auth-utils: ^0.5.23
+  nuxt: https://pkg.pr.new/nuxt/nuxt@33122
+  nuxt-auth-utils: ^0.5.24
   sass-embedded: ^1.92.0
-  taze: ^19.4.0
+  taze: ^19.5.0
   tsx: ^4.20.5
   typescript: ^5.9.2
   vitest: ^3.2.4
