chore: 更新依赖版本并优化 AutoForm 组件
- 将 @nuxt/kit 和 @nuxt/schema 依赖版本更新至 4.1.1。
- 更新 pnpm-lock.yaml 和 pnpm-workspace.yaml 中的相关依赖版本。
- 在 AutoForm 组件中添加对新字段类型的支持，优化控件映射逻辑。
- 移除不再使用的 ArrayField 组件及相关代码，提升代码整洁性。
- 更新文档，提供更清晰的使用指南与元数据结构说明。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -99,5 +99,6 @@
   "tailwindCSS.experimental.configFile": {
     "playground/app/assets/css/main.css": "playground/app/**",
     "src/runtime/assets/css/main.css": "src/runtime/**"
-  }
+  },
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
