--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -10,9 +10,9 @@ catalog:
   '@nuxt/devtools': ^2.6.3
   '@nuxt/eslint': ^1.9.0
   '@nuxt/image': ^1.11.0
-  '@nuxt/kit': ^4.1.0
+  '@nuxt/kit': ^4.1.1
   '@nuxt/module-builder': ^1.0.2
-  '@nuxt/schema': ^4.1.0
+  '@nuxt/schema': ^4.1.1
   '@nuxt/ui': ^4.0.0-alpha.1
   '@nuxtjs/i18n': ^10.0.6
   '@types/node': ^24.3.1
@@ -20,13 +20,13 @@ catalog:
   '@vueuse/motion': ^3.0.3
   '@vueuse/nuxt': ^13.9.0
   defu: ^6.1.4
-  eslint: ^9.34.0
+  eslint: ^9.35.0
   eslint-plugin-format: ^1.0.1
   fast-glob: ^3.3.3
   lru-cache: ^11.2.1
-  nuxt: https://pkg.pr.new/nuxt/nuxt@33122
+  nuxt: ^4.1.1
   nuxt-auth-utils: ^0.5.24
-  sass-embedded: ^1.92.0
+  sass-embedded: ^1.92.1
   taze: ^19.5.0
   tsx: ^4.20.5
   typescript: ^5.9.2
