feat(auto-form): 重构控件映射与类型系统
- 将默认控件映射提取为独立常量文件 `DEFAULT_CONTROLS`
- 增强 `createAutoFormZ` 类型工具，支持泛型接口与控件类型推断
- 优化 Zod 类型扩展，简化 meta 配置的类型提示
- 移除未使用的工具导出与导入路径
- 添加 Vitest UI 依赖并配置测试环境

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "dist"
   ],
   "scripts": {
+    "test": "vitest",
+    "test:types": "vitest typecheck",
     "prepack": "nr build",
     "build": "nuxt-module-build build",
     "dev": "nr dev:prepare && nuxi dev playground",
@@ -32,7 +34,6 @@
     "release": "release-it --verbose",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "vitest",
     "typecheck": "vue-tsc --noEmit && nuxt typecheck playground",
     "up": "taze major -wIr",
     "clean": "tsx scripts/rm.ts"
@@ -59,6 +60,7 @@
     "@nuxt/module-builder": "catalog:",
     "@nuxt/schema": "catalog:",
     "@types/node": "catalog:",
+    "@vitest/ui": "^3.2.4",
     "@vueuse/nuxt": "catalog:",
     "eslint": "catalog:",
     "eslint-plugin-format": "catalog:",
