--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -30,7 +30,7 @@ catalog:
   taze: ^19.5.0
   tsx: ^4.20.5
   typescript: ^5.9.2
-  vitest: ^3.2.4
+  vitest: 3.2.4
   vue-tsc: ^3.0.6
   zod: ^4.1.5
 
