--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,8 +1,9 @@
 packages:
   - playground
+  - test
 
 catalog:
-  '@antfu/eslint-config': ^5.2.2
+  '@antfu/eslint-config': ^5.3.0
   '@antfu/ni': ^25.0.0
   '@iconify-json/lucide': ^1.2.66
   '@iconify-json/simple-icons': ^1.2.50
@@ -13,8 +14,9 @@ catalog:
   '@nuxt/kit': ^4.1.1
   '@nuxt/module-builder': ^1.0.2
   '@nuxt/schema': ^4.1.1
+  '@nuxt/test-utils': ^3.19.2
   '@nuxt/ui': ^4.0.0-alpha.1
-  '@nuxtjs/i18n': ^10.0.6
+  '@nuxtjs/i18n': ^10.1.0
   '@types/node': ^24.3.1
   '@vueuse/core': ^13.9.0
   '@vueuse/motion': ^3.0.3
@@ -26,10 +28,12 @@ catalog:
   lru-cache: ^11.2.1
   nuxt: ^4.1.1
   nuxt-auth-utils: ^0.5.24
+  pkg-types: ^2.3.0
   sass-embedded: ^1.92.1
-  taze: ^19.5.0
+  taze: ^19.6.0
   tsx: ^4.20.5
   typescript: ^5.9.2
+  ufo: ^1.6.1
   vitest: 3.2.4
   vue-tsc: ^3.0.6
   zod: ^4.1.5
