更新 pnpm 依赖版本并优化 AutoForm 组件
- 将多个依赖版本更新至最新，包括 @nuxt/kit、@nuxt/schema、@types/node 等。
- 在 AutoForm 组件中添加对新字段类型的支持，优化控件映射逻辑。
- 移除不再使用的代码和注释，提升代码可读性。
- 更新文档，提供更清晰的使用指南与元数据结构说明。

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -26,9 +26,8 @@ catalog:
   eslint-plugin-format: ^1.0.1
   fast-glob: ^3.3.3
   lru-cache: ^11.2.1
-  nuxt: ^4.1.1
+  nuxt: https://pkg.pr.new/nuxt/nuxt@6a59b73
   nuxt-auth-utils: ^0.5.24
-  pkg-types: ^0.0.0
   sass-embedded: ^1.92.1
   taze: ^19.6.0
   tsx: ^4.20.5
