--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,39 +3,39 @@ packages:
   - test
 
 catalog:
-  '@antfu/eslint-config': ^5.3.0
+  '@antfu/eslint-config': ^5.4.1
   '@antfu/ni': ^26.0.1
   '@iconify-json/lucide': ^1.2.68
-  '@iconify-json/simple-icons': ^1.2.52
+  '@iconify-json/simple-icons': ^1.2.53
   '@movk/core': ^0.0.5
-  '@nuxt/devtools': ^2.6.3
+  '@nuxt/devtools': ^2.6.5
   '@nuxt/eslint': ^1.9.0
   '@nuxt/image': ^1.11.0
   '@nuxt/kit': ^4.1.2
   '@nuxt/module-builder': ^1.0.2
   '@nuxt/schema': ^4.1.2
   '@nuxt/test-utils': ^3.19.2
-  '@nuxt/ui': ^4.0.0-alpha.2
+  '@nuxt/ui': ^4.0.0
   '@nuxtjs/i18n': ^10.1.0
   '@types/node': ^24.5.2
   '@vueuse/core': ^13.9.0
   '@vueuse/motion': ^3.0.3
   '@vueuse/nuxt': ^13.9.0
   defu: ^6.1.4
-  eslint: ^9.35.0
-  eslint-plugin-format: ^1.0.1
+  eslint: ^9.36.0
+  eslint-plugin-format: ^1.0.2
   fast-glob: ^3.3.3
   lru-cache: ^11.2.1
   nuxt: ^4.1.2
   nuxt-auth-utils: ^0.5.25
-  sass-embedded: ^1.92.1
-  taze: ^19.6.0
+  sass-embedded: ^1.93.1
+  taze: ^19.7.0
   tsx: ^4.20.5
   typescript: ^5.9.2
   ufo: ^1.6.1
   vitest: 3.2.4
-  vue-tsc: ^3.0.7
-  zod: ^4.1.9
+  vue-tsc: ^3.0.8
+  zod: ^4.1.11
 
 onlyBuiltDependencies:
   - '@parcel/watcher'
