feat: implement AutoFormArrayRenderer component
- Add new AutoFormArrayRenderer component for handling array fields
- Update AutoForm core logic to support array rendering
- Enhance auto-form types and utilities
- Update playground demo page
- Update documentation and dependencies

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@movk/nuxt",
   "type": "module",
   "version": "0.0.0",
-  "packageManager": "pnpm@10.17.1",
+  "packageManager": "pnpm@10.18.0",
   "description": "Movk Nuxt module",
   "license": "MIT",
   "repository": "movk/nuxt",
@@ -63,11 +63,13 @@
     "@nuxt/schema": "catalog:",
     "@nuxt/test-utils": "catalog:",
     "@types/node": "catalog:",
+    "@types/sortablejs": "catalog:",
     "@vueuse/nuxt": "catalog:",
     "eslint": "catalog:",
     "eslint-plugin-format": "catalog:",
     "fast-glob": "catalog:",
     "nuxt": "catalog:",
+    "sortablejs": "catalog:",
     "taze": "catalog:",
     "tsx": "catalog:",
     "typescript": "catalog:",
