refactor(auto-form): 优化数组和嵌套组件的渲染逻辑
- 移除 sortablejs 依赖,简化项目依赖
- 重构 AutoFormArrayRenderer 组件
  - 提取 hint slot 创建逻辑到独立工厂函数
  - 优化字段路径更新逻辑
  - 添加默认值创建函数
  - 重命名 useCollapsible 为 shouldShowCollapsible 提高可读性
- 重构 AutoFormNestedRenderer 组件
  - 使用模板替代 h 函数进行递归渲染
  - 简化组件结构,提高可维护性
- 优化 useAutoFormContext 中的折叠功能增强器
  - 简化逻辑判断
  - 优化配置合并
- 在 auto-form.ts 中新增 createHintSlotFactory 工具函数
  - 统一管理 hint slot 的创建逻辑
  - 提高代码复用性
- 更新 VS Code 设置,启用注释翻译悬停功能

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -100,5 +100,6 @@
     "playground/app/assets/css/main.css": "playground/app/**",
     "src/runtime/assets/css/main.css": "src/runtime/**"
   },
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "commentTranslate.hover.enabled": true
 }
