--- a/package.json
+++ b/package.json
@@ -40,38 +40,35 @@
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
-    "@iconify-json/lucide": "catalog:",
-    "@iconify-json/simple-icons": "catalog:",
-    "@movk/core": "catalog:",
-    "@nuxt/image": "catalog:",
-    "@nuxt/kit": "catalog:",
-    "@nuxt/ui": "catalog:",
-    "@nuxtjs/i18n": "catalog:",
-    "@vueuse/core": "catalog:",
-    "defu": "catalog:",
-    "lru-cache": "catalog:",
-    "nuxt-auth-utils": "catalog:",
-    "ufo": "catalog:",
-    "zod": "catalog:"
+    "@iconify-json/lucide": "^1.2.69",
+    "@iconify-json/simple-icons": "^1.2.54",
+    "@movk/core": "^0.0.5",
+    "@nuxt/image": "^1.11.0",
+    "@nuxt/kit": "^4.1.3",
+    "@nuxt/ui": "^4.0.1",
+    "@nuxtjs/i18n": "^10.1.0",
+    "@vueuse/core": "^13.9.0",
+    "defu": "^6.1.4",
+    "lru-cache": "^11.2.2",
+    "nuxt-auth-utils": "^0.5.25",
+    "ufo": "^1.6.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "catalog:",
-    "@antfu/ni": "catalog:",
-    "@nuxt/devtools": "catalog:",
-    "@nuxt/eslint": "catalog:",
-    "@nuxt/module-builder": "catalog:",
-    "@nuxt/schema": "catalog:",
-    "@nuxt/test-utils": "catalog:",
-    "@types/node": "catalog:",
-    "@vueuse/nuxt": "catalog:",
-    "eslint": "catalog:",
-    "eslint-plugin-format": "catalog:",
-    "fast-glob": "catalog:",
-    "nuxt": "catalog:",
-    "taze": "catalog:",
-    "tsx": "catalog:",
-    "typescript": "catalog:",
-    "vitest": "catalog:",
-    "vue-tsc": "catalog:"
+    "@antfu/ni": "^26.1.0",
+    "@nuxt/devtools": "^2.6.5",
+    "@nuxt/eslint": "^1.9.0",
+    "@nuxt/module-builder": "^1.0.2",
+    "@nuxt/schema": "^4.1.3",
+    "@nuxt/test-utils": "^3.19.2",
+    "@vueuse/nuxt": "^13.9.0",
+    "eslint": "^9.37.0",
+    "fast-glob": "^3.3.3",
+    "nuxt": "^4.1.3",
+    "taze": "^19.7.0",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
+    "vitest": "3.2.4",
+    "vue-tsc": "^3.1.1"
   }
 }
