--- a/playground/package.json
+++ b/playground/package.json
@@ -9,10 +9,10 @@
     "typecheck": "nuxi typecheck"
   },
   "dependencies": {
-    "@vueuse/motion": "catalog:"
+    "@vueuse/motion": "^3.0.3"
   },
   "devDependencies": {
-    "nuxt": "catalog:",
-    "sass-embedded": "catalog:"
+    "nuxt": "^4.1.3",
+    "sass-embedded": "^1.93.2"
   }
 }
