✨ feat: 重构 Playground 应用 UI 架构
- 新增 Matrix、Navbar、ThemeDropdown 组件，移除过时组件
- 简化页面结构，移除 auth/login/register 等不需要的页面
- 添加 useNavigation 组合式函数，统一导航管理
- 更新应用配置和样式，优化用户体验
- 清理 i18n 相关配置，专注核心功能展示

--- a/playground/package.json
+++ b/playground/package.json
@@ -9,10 +9,10 @@
     "typecheck": "nuxi typecheck"
   },
   "dependencies": {
-    "@vueuse/motion": "^3.0.3"
+    "@movk/nuxt": "workspace:*"
   },
   "devDependencies": {
-    "nuxt": "^4.1.3",
-    "sass-embedded": "^1.93.2"
+    "nuxt": "^4.2.0",
+    "sass-embedded": "^1.93.3"
   }
 }
