--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,81 +1,11 @@
 {
-  "i18n-ally.keystyle": "nested",
-  "i18n-ally.localesPaths": [
-    "**/i18n/locales"
-  ],
-  "i18n-ally.enabledFrameworks": [
-    "vue"
-  ],
-  "i18n-ally.displayLanguage": "zh_cn",
-  "i18n-ally.sortKeys": true,
-  "i18n-ally.keepFulfilled": true,
-  // Disable the default formatter
-  "prettier.enable": false,
+  "eslint.useFlatConfig": true,
   "editor.formatOnSave": false,
   // Auto fix
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit",
     "source.organizeImports": "never"
   },
-  // Silent the stylistic rules in you IDE, but still auto fix them
-  "eslint.rules.customizations": [
-    {
-      "rule": "style/*",
-      "severity": "off"
-    },
-    {
-      "rule": "format/*",
-      "severity": "off"
-    },
-    {
-      "rule": "*-indent",
-      "severity": "off"
-    },
-    {
-      "rule": "*-spacing",
-      "severity": "off"
-    },
-    {
-      "rule": "*-spaces",
-      "severity": "off"
-    },
-    {
-      "rule": "*-order",
-      "severity": "off"
-    },
-    {
-      "rule": "*-dangle",
-      "severity": "off"
-    },
-    {
-      "rule": "*-newline",
-      "severity": "off"
-    },
-    {
-      "rule": "*quotes",
-      "severity": "off"
-    },
-    {
-      "rule": "*semi",
-      "severity": "off"
-    }
-  ],
-  // The following is optional.
-  // It's better to put under project setting `.vscode/settings.json`
-  // to avoid conflicts with working with different eslint configs
-  // that does not support all formats.
-  "eslint.validate": [
-    "javascript",
-    "javascriptreact",
-    "typescript",
-    "typescriptreact",
-    "vue",
-    "html",
-    "markdown",
-    "json",
-    "jsonc",
-    "yaml"
-  ],
   "iconify.annotations": true,
   "iconify.inplace": true,
   "files.associations": {
@@ -96,10 +26,14 @@
       "(?:'|\"|`)([^']*)(?:'|\"|`)"
     ]
   ],
-  "tailwindCSS.experimental.configFile": {
-    "playground/app/assets/css/main.css": "playground/app/**",
-    "src/runtime/assets/css/main.css": "src/runtime/**"
-  },
-  "typescript.tsdk": "node_modules/typescript/lib",
-  "commentTranslate.hover.enabled": true
+  // Required for the extension
+  "mdc.enableFormatting": true,
+  "mdc.enableComponentMetadataCompletions": true,
+  // Recommended (for `mdc` and `md`, depending on your usage)
+  "[mdc]": {
+    "editor.tabSize": 2,
+    "editor.insertSpaces": true,
+    "editor.detectIndentation": false,
+    "editor.formatOnPaste": true
+  }
 }
