--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@movk/nuxt",
   "type": "module",
   "version": "0.0.0",
-  "packageManager": "pnpm@10.18.1",
+  "packageManager": "pnpm@10.20.0",
   "description": "Movk Nuxt module",
   "license": "MIT",
   "repository": "movk/nuxt",
@@ -24,11 +24,12 @@
     "dist"
   ],
   "scripts": {
+    "postinstall": "nr dev:prepare",
     "prepack": "nr build",
     "build": "nuxt-module-build build",
-    "dev": "nr dev:prepare && nuxi dev playground",
+    "dev": "nuxt dev playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
-    "dev:build": "nuxi build playground",
+    "dev:build": "nuxt build playground",
     "release": "release-it --verbose",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -40,35 +41,31 @@
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
-    "@iconify-json/lucide": "^1.2.69",
-    "@iconify-json/simple-icons": "^1.2.54",
+    "@iconify-json/lucide": "^1.2.71",
     "@movk/core": "^0.0.5",
     "@nuxt/image": "^1.11.0",
-    "@nuxt/kit": "^4.1.3",
-    "@nuxt/ui": "^4.0.1",
-    "@nuxtjs/i18n": "^10.1.0",
-    "@vueuse/core": "^13.9.0",
+    "@nuxt/kit": "^4.2.0",
+    "@nuxt/ui": "^4.1.0",
+    "@vueuse/core": "^14.0.0",
+    "scule": "^1.3.0",
     "defu": "^6.1.4",
-    "lru-cache": "^11.2.2",
-    "nuxt-auth-utils": "^0.5.25",
-    "ufo": "^1.6.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@antfu/ni": "^26.1.0",
-    "@nuxt/devtools": "^2.6.5",
-    "@nuxt/eslint": "^1.9.0",
+    "@antfu/ni": "^27.0.1",
+    "@nuxt/devtools": "^3.0.1",
+    "@nuxt/eslint": "^1.10.0",
     "@nuxt/module-builder": "^1.0.2",
-    "@nuxt/schema": "^4.1.3",
-    "@nuxt/test-utils": "^3.19.2",
-    "@vueuse/nuxt": "^13.9.0",
-    "eslint": "^9.37.0",
+    "@nuxt/schema": "^4.2.0",
+    "@nuxt/test-utils": "^3.20.1",
+    "@vueuse/nuxt": "^14.0.0",
+    "eslint": "9.38.0",
     "fast-glob": "^3.3.3",
-    "nuxt": "^4.1.3",
-    "taze": "^19.7.0",
+    "nuxt": "^4.2.0",
+    "taze": "^19.9.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "vitest": "3.2.4",
-    "vue-tsc": "^3.1.1"
+    "vue-tsc": "^3.1.2"
   }
 }
