--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,47 +1,16 @@
 packages:
   - playground
   - test
+  - docs
 
-catalog:
-  '@antfu/eslint-config': ^5.4.1
-  '@antfu/ni': ^26.1.0
-  '@iconify-json/lucide': ^1.2.69
-  '@iconify-json/simple-icons': ^1.2.54
-  '@movk/core': ^0.0.5
-  '@nuxt/devtools': ^2.6.5
-  '@nuxt/eslint': ^1.9.0
-  '@nuxt/image': ^1.11.0
-  '@nuxt/kit': ^4.1.3
-  '@nuxt/module-builder': ^1.0.2
-  '@nuxt/schema': ^4.1.3
-  '@nuxt/test-utils': ^3.19.2
-  '@nuxt/ui': ^4.0.1
-  '@nuxtjs/i18n': ^10.1.0
-  '@types/node': ^24.7.0
-  '@vueuse/core': ^13.9.0
-  '@vueuse/motion': ^3.0.3
-  '@vueuse/nuxt': ^13.9.0
-  defu: ^6.1.4
-  eslint: ^9.37.0
-  eslint-plugin-format: ^1.0.2
-  fast-glob: ^3.3.3
-  lru-cache: ^11.2.2
-  nuxt: ^4.1.3
-  nuxt-auth-utils: ^0.5.25
-  sass-embedded: ^1.93.2
-  taze: ^19.7.0
-  tsx: ^4.20.6
-  typescript: ^5.9.3
-  ufo: ^1.6.1
-  vitest: 3.2.4
-  vue-tsc: ^3.1.1
-  zod: ^4.1.12
-
-onlyBuiltDependencies:
+ignoredBuiltDependencies:
   - '@parcel/watcher'
   - '@tailwindcss/oxide'
+  - '@vercel/speed-insights'
   - esbuild
-  - sharp
-  - simple-git-hooks
   - unrs-resolver
   - vue-demi
+
+onlyBuiltDependencies:
+  - better-sqlite3
+  - sharp
