--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@nuxt/kit": "^4.2.0",
     "@nuxt/ui": "^4.1.0",
     "@vueuse/core": "^14.0.0",
+    "@internationalized/date": "^3.10.0",
     "scule": "^1.3.0",
     "defu": "^6.1.4",
     "zod": "^4.1.12"
