🔧 chore: 完善 CI 工作流和发布配置
- 在 CI 工作流中添加构建和发布步骤
- 在发布前钩子中添加类型检查和测试步骤

--- a/.release-it.json
+++ b/.release-it.json
@@ -17,7 +17,9 @@
   },
   "hooks": {
     "before:init": [
-      "nr lint"
+      "nr lint",
+      "nr typecheck",
+      "nr test"
     ],
     "after:release": "echo Successfully released ${name} v${version} to ${repo.repository}."
   },
