--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,3 +31,9 @@ jobs:
 
       - name: Test
         run: pnpm run test run
+
+      - name: Build
+        run: pnpm run build
+
+      - name: Publish
+        run: pnpx pkg-pr-new publish --compact --no-template --pnpm
