chore: 调整 release-it 依赖与配置
简化 conventional changelog 预设以沿用默认类型配置，降低后续维护负担
新增 release-it 相关依赖以确保发布流程具备所需插件能力

--- a/.release-it.json
+++ b/.release-it.json
@@ -26,29 +26,13 @@
   "plugins": {
     "@release-it/conventional-changelog": {
       "preset": {
-        "name": "conventionalcommits",
-        "types": [
-          { "type": "feat", "section": "✨ Features" },
-          { "type": "fix", "section": "🐛 Bug Fixes" },
-          { "type": "docs", "section": "📚 Documentation" },
-          { "type": "style", "section": "💄 Styles" },
-          { "type": "refactor", "section": "♻️ Code Refactoring" },
-          { "type": "perf", "section": "⚡ Performance Improvements" },
-          { "type": "test", "section": "✅ Tests" },
-          { "type": "build", "section": "📦 Build System" },
-          { "type": "ci", "section": "👷 CI" },
-          { "type": "chore", "section": "🔧 Chores" }
-        ]
+        "name": "conventionalcommits"
       },
       "infile": "CHANGELOG.md",
       "header": "# 📋 Changelog",
       "ignoreRecommendedBump": true,
       "gitRawCommitsOpts": {
         "path": "."
-      },
-      "parserOpts": {
-        "headerPattern": "^(?:(?:[\\uD83C-\\uDBFF\\uDC00-\\uDFFF]|[\\u2600-\\u27BF])+\\s+)?(\\w+)(?:\\(([^)]*)\\))?!?:\\s(.+)$",
-        "headerCorrespondence": ["type", "scope", "subject"]
       }
     }
   }
