--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "@nuxt/module-builder": "^1.0.2",
     "@nuxt/schema": "^4.2.1",
     "@nuxt/test-utils": "^3.20.1",
+    "@release-it/bumper": "^7.0.5",
+    "@release-it/conventional-changelog": "^10.0.2",
     "@vueuse/nuxt": "^14.0.0",
     "eslint": "9.38.0",
     "fast-glob": "^3.3.3",
