--- a/.release-it.json
+++ b/.release-it.json
@@ -30,10 +30,7 @@
       },
       "infile": "CHANGELOG.md",
       "header": "# 📋 Changelog",
-      "ignoreRecommendedBump": true,
-      "gitRawCommitsOpts": {
-        "path": "."
-      }
+      "ignoreRecommendedBump": true
     }
   }
 }
