--- a/docs/package.json
+++ b/docs/package.json
@@ -10,6 +10,7 @@
     "@movk/nuxt-docs": "^1.3.6",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "@octokit/rest": "^22.0.1",
     "better-sqlite3": "^12.4.6",
     "nuxt": "^4.2.1"
   }
