chore: 升级依赖并优化配置
- 升级 @nuxt/ui 到 4.2.1
- 升级 @nuxt/devtools 到 3.1.1
- 升级 @iconify-json/lucide 到 1.2.75
- 升级 zod 到 4.1.13
- 升级 vue-tsc 到 3.1.5
- 添加 taze 依赖用于依赖升级
- 添加 up 脚本快捷命令
- 优化 dev 和 docs 命令自动执行 dev:prepare
- 更新 docs/tsconfig.json 使用 references 配置
- 调整 playground 脚本命令从 nuxi 改为 nuxt

--- a/playground/package.json
+++ b/playground/package.json
@@ -3,10 +3,10 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "nuxi dev",
-    "build": "nuxi build",
-    "generate": "nuxi generate",
-    "typecheck": "nuxi typecheck"
+    "dev": "nuxt dev",
+    "build": "nuxt build",
+    "generate": "nuxt generate",
+    "typecheck": "nuxt typecheck"
   },
   "devDependencies": {
     "nuxt": "^4.2.1",
