--- a/package.json
+++ b/package.json
@@ -20,46 +20,48 @@
   "scripts": {
     "prepack": "nr build",
     "build": "nuxt-module-build build",
-    "dev": "nuxt dev playground",
+    "dev": "nr dev:prepare && nuxt dev playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxt prepare playground && nuxt prepare docs",
     "dev:build": "nuxt build playground",
-    "docs": "nuxt dev docs",
+    "docs": "nr dev:prepare && nuxt dev docs",
     "docs:build": "nuxt build docs",
     "release": "release-it",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "typecheck": "vue-tsc --noEmit && nuxt typecheck playground && nuxt typecheck docs",
     "clean": "tsx scripts/rm.ts",
+    "up": "taze major -wIr",
     "test": "vitest"
   },
   "dependencies": {
-    "@iconify-json/lucide": "^1.2.73",
+    "@iconify-json/lucide": "^1.2.75",
     "@internationalized/date": "^3.10.0",
     "@movk/core": "^1.0.2",
     "@nuxt/image": "^2.0.0",
-    "@nuxt/ui": "^4.1.0",
+    "@nuxt/ui": "^4.2.1",
     "@vueuse/core": "^14.0.0",
     "defu": "^6.1.4",
     "scule": "^1.3.0",
-    "zod": "^4.1.12"
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@antfu/ni": "^27.0.1",
-    "@nuxt/devtools": "^3.1.0",
+    "@nuxt/devtools": "^3.1.1",
     "@nuxt/eslint": "^1.10.0",
     "@nuxt/kit": "^4.2.1",
     "@nuxt/module-builder": "^1.0.2",
     "@nuxt/schema": "^4.2.1",
     "@nuxt/test-utils": "^3.20.1",
     "@release-it/bumper": "^7.0.5",
-    "@release-it/conventional-changelog": "^10.0.1",
+    "@release-it/conventional-changelog": "^10.0.2",
     "@vueuse/nuxt": "^14.0.0",
     "eslint": "9.38.0",
     "fast-glob": "^3.3.3",
     "nuxt": "^4.2.1",
+    "taze": "^19.9.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "vitest": "3.2.4",
-    "vue-tsc": "^3.1.3"
+    "vue-tsc": "^3.1.5"
   }
 }
