chore: 升级文档主题依赖并优化命令
- 升级 @movk/nuxt-docs 至 1.3.9
- 移除 @octokit/rest 依赖
- 优化 dev 和 docs 命令，移除重复的 dev:prepare

--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "scripts": {
     "prepack": "nr build",
     "build": "nuxt-module-build build",
-    "dev": "nr dev:prepare && nuxt dev playground",
+    "dev": "nuxt dev playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxt prepare playground && nuxt prepare docs",
     "dev:build": "nuxt build playground",
-    "docs": "nr dev:prepare && nuxt dev docs",
+    "docs": "nuxt dev docs",
     "docs:build": "nuxt build docs",
     "release": "release-it",
     "lint": "eslint .",
