--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@nuxt/test-utils": "^3.20.1",
     "@release-it/bumper": "^7.0.5",
     "@release-it/conventional-changelog": "^10.0.2",
+    "@vitest/coverage-v8": "^3.2.4",
     "@vueuse/nuxt": "^14.1.0",
     "eslint": "9.38.0",
     "fast-glob": "^3.3.3",
