--- a/docs/package.json
+++ b/docs/package.json
@@ -8,9 +8,12 @@
   },
   "dependencies": {
     "@movk/nuxt-docs": "^1.3.10",
+    "@tiptap/pm": "^3.11.1",
+    "@tiptap/starter-kit": "^3.11.1",
+    "@tiptap/vue-3": "^3.11.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
-    "better-sqlite3": "^12.4.6",
+    "better-sqlite3": "^12.5.0",
     "nuxt": "^4.2.1"
   }
 }
