ci: 在 CI 流程中添加 dev:prepare 步骤
在 lint 和 typecheck 之前执行 dev:prepare,确保 Nuxt 模块正确构建

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,9 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install
+      
+      - name: Prepare
+        run: pnpm run dev:prepare
 
       - name: Run lint
         run: pnpm run lint
