--- a/docs/package.json
+++ b/docs/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "nr dev:prepare && nuxt build",
+    "build": "pnpm -w run dev:prepare && nuxt build",
     "dev": "nuxt dev"
   },
   "dependencies": {
