--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "nuxt": "^4.2.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "vitest": "3.2.4",
+    "vitest": "^4.0.14",
     "vue-tsc": "^3.1.5"
   }
 }
