--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "url": "git+https://github.com/mhaibaraai/movk-nuxt.git"
   },
   "homepage": "https://nuxt.mhaibaraai.cn",
+  "engines": {
+    "node": "22.x"
+  },
   "bugs": {
     "url": "https://github.com/mhaibaraai/movk-nuxt/issues"
   },
@@ -60,6 +63,7 @@
     "@vueuse/core": "^14.1.0",
     "@vueuse/nuxt": "^14.1.0",
     "defu": "^6.1.4",
+    "tailwindcss": "^4.1.17",
     "scule": "^1.3.0",
     "zod": "^4.1.13"
   },
