chore(deps): 添加 zod peerDependency 声明
声明 zod >= 4.1.13 为 peerDependency，确保使用者安装兼容的 Zod 版本

--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
   "files": [
     "dist"
   ],
+  "peerDependencies": {
+    "zod": ">=4.1.13"
+  },
   "scripts": {
     "prepack": "nr build",
     "build": "nuxt-module-build build",
