--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "homepage": "https://nuxt.mhaibaraai.cn",
   "engines": {
-    "node": "22.x"
+    "node": "^20.x || ^22.x"
   },
   "bugs": {
     "url": "https://github.com/mhaibaraai/movk-nuxt/issues"
