chore(deps): 添加 @nuxt/ui 到 peerDependencies
- 将 @nuxt/ui (>=4.2.0) 添加到 peerDependencies
- 确保用户明确安装所需的 UI 依赖

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "dist"
   ],
   "peerDependencies": {
-    "zod": ">=4.1.13"
+    "zod": ">=4.1.13",
+    "@nuxt/ui": ">=4.2.1"
   },
   "scripts": {
     "prepack": "nr build",
