--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "dist"
   ],
   "peerDependencies": {
-    "zod": ">=4.1.13",
-    "@nuxt/ui": ">=4.2.1"
+    "@nuxt/ui": ">=4.2.1",
+    "zod": ">=4.1.13"
   },
   "scripts": {
     "prepack": "nr build",
@@ -68,8 +68,8 @@
     "@vueuse/nuxt": "^14.1.0",
     "defu": "^6.1.4",
     "nuxt-auth-utils": "^0.5.25",
-    "tailwindcss": "^4.1.17",
     "scule": "^1.3.0",
+    "tailwindcss": "^4.1.17",
     "zod": "^4.1.13"
   },
   "devDependencies": {
@@ -85,6 +85,7 @@
     "@vitest/coverage-v8": "^4.0.15",
     "eslint": "9.39.1",
     "fast-glob": "^3.3.3",
+    "jsdom": "^27.2.0",
     "nuxt": "^4.2.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
