--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "dev:build": "nuxt build playground",
     "docs": "nuxt dev docs",
     "docs:build": "nuxt build docs",
-    "release": "release-it && npm publish --access public",
+    "release": "release-it && npm publish",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "typecheck": "vue-tsc --noEmit && nuxt typecheck playground",
@@ -81,9 +81,10 @@
     "@nuxt/schema": "^4.2.1",
     "@nuxt/test-utils": "^3.20.1",
     "@release-it/bumper": "^7.0.5",
-    "@release-it/conventional-changelog": "^10.0.2",
+    "@release-it/conventional-changelog": "^10.0.4",
     "@vitest/coverage-v8": "^4.0.15",
     "eslint": "9.39.1",
+    "release-it": "^19.1.0",
     "fast-glob": "^3.3.3",
     "jsdom": "^27.2.0",
     "nuxt": "^4.2.1",
