--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.1.1",
   "packageManager": "pnpm@10.26.1",
-  "description": "Schema-driven form and table generation module for Nuxt 4",
+  "description": "Modular engineering suite for Nuxt 4 with schema-driven forms, API integration, UI components and composables",
   "author": "YiXuan <mhaibaraai@gmail.com>",
   "license": "MIT",
   "repository": {
@@ -23,10 +23,16 @@
     "nuxt4",
     "zod",
     "form",
-    "table",
     "auto-form",
     "schema-driven",
-    "validation"
+    "validation",
+    "api",
+    "fetch",
+    "auth",
+    "upload",
+    "download",
+    "composables",
+    "ui-components"
   ],
   "exports": {
     ".": {
@@ -67,6 +73,7 @@
     "@vueuse/core": "^14.1.0",
     "@vueuse/nuxt": "^14.1.0",
     "defu": "^6.1.4",
+    "nuxt-auth-utils": "^0.5.26",
     "tailwindcss": "^4.1.18",
     "scule": "^1.3.0",
     "zod": "^4.2.1"
