--- a/package.json
+++ b/package.json
@@ -79,7 +79,6 @@
     "zod": "^4.2.1"
   },
   "devDependencies": {
-    "@antfu/ni": "^28.0.0",
     "@nuxt/devtools": "^3.1.1",
     "@nuxt/eslint": "^1.12.1",
     "@nuxt/kit": "^4.2.2",
@@ -89,6 +88,7 @@
     "@release-it/bumper": "^7.0.5",
     "@release-it/conventional-changelog": "^10.0.4",
     "@vitest/coverage-v8": "^4.0.16",
+    "jsdom": "^27.3.0",
     "eslint": "9.39.2",
     "fast-glob": "^3.3.3",
     "nuxt": "^4.2.2",
