chore: 统一使用 pnpm 命令替代 nr 别名

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "zod": ">=4.1.13"
   },
   "scripts": {
-    "prepack": "nr build",
+    "prepack": "pnpm build",
     "build": "nuxt-module-build build",
     "dev": "nuxt dev playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxt prepare playground && nuxt prepare docs",
