--- a/.release-it.json
+++ b/.release-it.json
@@ -17,9 +17,9 @@
   },
   "hooks": {
     "before:init": [
-      "nr lint",
-      "nr typecheck",
-      "nr test"
+      "pnpm lint",
+      "pnpm typecheck",
+      "pnpm test"
     ],
     "after:release": "echo Successfully released ${name} v${version} to ${repo.repository}."
   },
