--- a/docs/.env.example
+++ b/docs/.env.example
@@ -1,2 +1,8 @@
 # Used to fetch docs content
 NUXT_GITHUB_TOKEN=
+# Used to access AI Gateway services
+AI_GATEWAY_API_KEY=
+# Used to access OpenRouter services (alternative to AI Gateway)
+OPENROUTER_API_KEY=
+# Auth password for session management
+NUXT_SESSION_PASSWORD=
