--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "dist"
   ],
   "peerDependencies": {
-    "@nuxt/ui": ">=4.2.1",
-    "zod": ">=4.1.13"
+    "@nuxt/ui": ">=4.3.0",
+    "zod": ">=4.3.5"
   },
   "scripts": {
     "prepack": "pnpm build",
@@ -60,7 +60,7 @@
     "release": "release-it && npm publish",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "typecheck": "vue-tsc --noEmit && nuxt typecheck playground",
+    "typecheck": "vue-tsc -b --noEmit && nuxt typecheck playground && nuxt typecheck docs",
     "clean": "movk-clean",
     "test": "vitest"
   },
@@ -87,12 +87,12 @@
     "@nuxt/test-utils": "^3.23.0",
     "@release-it/bumper": "^7.0.5",
     "@release-it/conventional-changelog": "^10.0.4",
-    "@vitest/coverage-v8": "^4.0.16",
+    "@vitest/coverage-v8": "^4.0.17",
     "jsdom": "^27.4.0",
     "eslint": "9.39.2",
     "nuxt": "^4.2.2",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.16",
+    "vitest": "^4.0.17",
     "vue-tsc": "^3.2.2"
   }
 }
