chore: 优化 TypeScript 类型检查配置
移除 vue-tsc 的 -b (build) 标志,采用常规编译模式以提升增量检查性能

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "release": "release-it && npm publish",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "typecheck": "vue-tsc -b --noEmit && nuxt typecheck playground && nuxt typecheck docs",
+    "typecheck": "vue-tsc --noEmit && nuxt typecheck playground && nuxt typecheck docs",
     "clean": "movk-clean",
     "test": "vitest"
   },
