chore: 简化构建脚本和依赖配置
- 移除 docs 构建中的 dev:prepare 前置步骤
- 移除 playground 的 typecheck 脚本
- 更新 pnpm-lock.yaml 依赖锁定

--- a/playground/package.json
+++ b/playground/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "nuxt dev",
     "build": "nuxt build",
-    "generate": "nuxt generate",
-    "typecheck": "nuxt typecheck"
+    "generate": "nuxt generate"
   },
   "devDependencies": {
     "nuxt": "^4.2.2",
