--- a/package.json
+++ b/package.json
@@ -73,9 +73,10 @@
     "@vueuse/core": "^14.1.0",
     "@vueuse/nuxt": "^14.1.0",
     "defu": "^6.1.4",
+    "motion-v": "^1.8.1",
     "nuxt-auth-utils": "^0.5.26",
-    "tailwindcss": "^4.1.18",
     "scule": "^1.3.0",
+    "tailwindcss": "^4.1.18",
     "zod": "^4.3.5"
   },
   "devDependencies": {
@@ -88,8 +89,8 @@
     "@release-it/bumper": "^7.0.5",
     "@release-it/conventional-changelog": "^10.0.4",
     "@vitest/coverage-v8": "^4.0.17",
-    "jsdom": "^27.4.0",
     "eslint": "9.39.2",
+    "jsdom": "^27.4.0",
     "nuxt": "^4.2.2",
     "typescript": "^5.9.3",
     "vitest": "^4.0.17",
