chore: 升级 @movk/nuxt-docs 至 1.7.4 并更新 Node 版本要求
- 升级 @movk/nuxt-docs 依赖版本
- 移除对 Node.js 20.x 的支持,最低要求 22.x

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "homepage": "https://nuxt.mhaibaraai.cn",
   "engines": {
-    "node": "^20.x || ^22.x || ^24.x"
+    "node": "^22.x || ^24.x"
   },
   "bugs": {
     "url": "https://github.com/mhaibaraai/movk-nuxt/issues"
