--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "defu": "^6.1.4",
     "motion-v": "^1.8.1",
     "nuxt-auth-utils": "^0.5.26",
+    "nuxt-og-image": "^5.1.13",
     "scule": "^1.3.0",
     "tailwindcss": "^4.1.18",
     "zod": "^4.3.5"
