chore: 在初始化钩子中添加类型检查命令

--- a/.release-it.json
+++ b/.release-it.json
@@ -18,6 +18,7 @@
   "hooks": {
     "before:init": [
       "pnpm lint",
+      "pnpm typecheck",
       "pnpm test"
     ],
     "after:release": "echo Successfully released ${name} v${version} to ${repo.repository}."
