--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
   },
   "dependencies": {
     "@iconify-json/lucide": "^1.2.86",
+    "@iconify-json/ph": "^1.2.2",
+    "@iconify-json/tabler": "^1.2.26",
     "@internationalized/date": "^3.10.1",
     "@movk/core": "^1.1.0",
     "@nuxt/image": "^2.0.0",
