refactor: 重构模块导出配置和类型系统
- 增强 package.json 导出配置,支持 composables、components、runtime 等子路径导出
- 添加 typesVersions 配置以改进 TypeScript 类型解析
- 重构 module.ts 逻辑,提取配置处理函数简化代码结构
- 新增 module.ts 类型定义文件,完善类型导出

--- a/package.json
+++ b/package.json
@@ -36,12 +36,42 @@
   ],
   "exports": {
     ".": {
-      "types": "./dist/types.d.mts",
+      "types": "./dist/module.d.mts",
+      "style": "./dist/runtime/style.css",
       "import": "./dist/module.mjs"
+    },
+    "./runtime/*": "./dist/runtime/*",
+    "./components/*": "./dist/runtime/components/*",
+    "./composables": {
+      "types": "./dist/runtime/composables/index.d.ts",
+      "import": "./dist/runtime/composables/index.js"
+    },
+    "./composables/*": {
+      "types": "./dist/runtime/composables/*.d.ts",
+      "import": "./dist/runtime/composables/*.js"
     }
   },
+  "typesVersions": {
+    "*": {
+      ".": [
+        "./dist/module.d.mts"
+      ],
+      "runtime/*": [
+        "./dist/runtime/*"
+      ],
+      "components/*": [
+        "./dist/runtime/components/*"
+      ],
+      "composables": [
+        "./dist/runtime/composables/index.d.ts"
+      ],
+      "composables/*": [
+        "./dist/runtime/composables/*.d.ts"
+      ]
+    }
+  },
+  "style": "./dist/runtime/index.css",
   "main": "./dist/module.mjs",
-  "types": "./dist/types.d.mts",
   "files": [
     "dist"
   ],
