feat: 新增 useLazyApiFetch 并重构文档结构
- 新增 useLazyApiFetch composable，提供 lazy 便捷封装
- 重组文档结构：API 参考独立为第 4 章节，Composables 移至第 5 章节
- 删除旧的 API composables 详细文档（useApiFetch/useClientApiFetch/useUpload/useDownload）
- 新增 API 参考章节（包含 $api 实例、hooks 系统等）
- 新增最佳实践章节
- 简化并更新 CLAUDE.md，使其更聚焦于架构设计
- 更新 README.md 和相关配置

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "1.1.2",
   "packageManager": "pnpm@10.28.2",
-  "description": "Modular engineering suite for Nuxt 4 with schema-driven forms, API integration, UI components and composables",
+  "description": "Nuxt 4 modular engineering suite — schema-driven auto forms (Zod v4), API integration with auth & progress tracking, standalone UI components, and utility composables",
   "author": "YiXuan <mhaibaraai@gmail.com>",
   "license": "MIT",
   "repository": {
