--- a/docs/content/releases.yml
+++ b/docs/content/releases.yml
@@ -1,10 +1,10 @@
 title: 版本发布
-description: 查看 @movk/nuxt 的版本更新、功能增强与问题修复。
+description: 查看 Movk Nuxt 的版本更新、功能增强与问题修复。
 navigation: false
 releases: https://ungh.cc/repos/mhaibaraai/movk-nuxt/releases
 hero:
   title: 版本发布
-  description: 查看 @movk/nuxt 的版本更新、功能增强与问题修复。
+  description: 查看 Movk Nuxt 的版本更新、功能增强与问题修复。
   links:
     - label: 在 GitHub 上标星
       color: neutral
