--- a/docs/package.json
+++ b/docs/package.json
@@ -8,16 +8,18 @@
   },
   "dependencies": {
     "@internationalized/date": "^3.11.0",
-    "@movk/nuxt-docs": "^1.12.1",
+    "@movk/nuxt-docs": "^1.12.2",
     "@nuxt/content": "^3.11.2",
     "@nuxt/ui": "^4.4.0",
     "@nuxt/kit": "^4.3.1",
+    "@nuxtjs/mdc": "^0.20.1",
     "@tiptap/starter-kit": "^3.19.0",
     "@tiptap/vue-3": "^3.19.0",
     "better-sqlite3": "^12.6.2",
     "nuxt": "^4.3.1",
     "reka-ui": "^2.8.0",
     "tailwindcss": "^4.1.18",
+    "unist-util-visit": "^5.1.0",
     "zod": "^4.3.6"
   }
 }
