fix(docs): 修复 Vercel SSR 500 错误
通过将 reka-ui 添加到 build.transpile 解决 Nuxt Layer 架构下
reka-ui 多实例加载导致的 SSR 崩溃问题。

根因：@movk/nuxt-docs 层与 docs 项目通过不同路径 resolve reka-ui，
SSR 时 ConfigProvider 的 provide/inject 上下文跨实例不可见，
renderSlot 访问 null 导致报错 "Cannot read properties of null (reading 'ce')"。

--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxt prepare playground && nuxt prepare docs",
     "dev:build": "nuxt build playground",
     "docs": "nuxt dev docs",
-    "docs:build": "nuxt build docs",
+    "docs:build": "NODE_OPTIONS='--max-old-space-size=6144' nuxt build docs",
     "release": "release-it && npm publish",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
