--- a/docs/package.json
+++ b/docs/package.json
@@ -7,6 +7,7 @@
     "dev": "nuxt dev"
   },
   "dependencies": {
+    "@iconify-json/vscode-icons": "^1.2.44",
     "@internationalized/date": "^3.11.0",
     "@movk/nuxt-docs": "^1.13.0",
     "@nuxt/content": "^3.11.2",
